--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 CLIENT_URL=http://localhost:3000
-DB_URI=mongodb://kelompok14paw:pobCNpRnj8a31Bhb@ac-kmdhy6q-shard-00-00.g6x98jc.mongodb.net:27017,ac-kmdhy6q-shard-00-01.g6x98jc.mongodb.net:27017,ac-kmdhy6q-shard-00-02.g6x98jc.mongodb.net:27017/?ssl=true&replicaSet=atlas-zv3yog-shard-0&authSource=admin&retryWrites=true&w=majority
+DB_URI=mongodb://kelompok14paw:pobCNpRnj8a31Bhb@ac-kmdhy6q-shard-00-00.g6x98jc.mongodb.net:27017,ac-kmdhy6q-shard-00-01.g6x98jc.mongodb.net:27017,ac-kmdhy6q-shard-00-02.g6x98jc.mongodb.net:27017/main?ssl=true&replicaSet=atlas-zv3yog-shard-0&authSource=admin&retryWrites=true&w=majority
 PORT=5000
 
 GOOGLE_CLIENT_ID=768039877371-eeril88blkarbio0jjn3b8o5ordhtqh0.apps.googleusercontent.com
