--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "origin-url": "https://github.com/belum.git"
+    "origin-url": "https://github.com/damiosdam/kel14-PAW"
   },
   "keywords": [],
   "author": "",
