--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,19 @@
     "@iconify/react": "^4.1.1",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "@mui/x-data-grid": "^6.18.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.0",
+    "axios": "^1.6.1",
     "bulma": "^0.9.4",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "simplebar-react": "^3.2.4",
     "web-vitals": "^2.1.4"
   },
