--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-file-viewer": "^0.5.0",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
