--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "notiflix": "^3.2.6",
     "react": "^18.2.0",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-file-viewer": "^0.5.0",
     "react-helmet-async": "^1.3.0",
